[gd_scene load_steps=5 format=3 uid="uid://dpvdgv2wayty1"]

[ext_resource type="Theme" uid="uid://dlfpsajfoyq0w" path="res://ui-theme.tres" id="1_iuda5"]
[ext_resource type="Script" path="res://entities/ui/EndLevelConfirmDialog.gd" id="2_7j00m"]
[ext_resource type="Texture2D" uid="uid://juln6mitqqjq" path="res://3rdparty/kenney/ui/panelInset_beige.png" id="2_bqswe"]
[ext_resource type="Texture2D" uid="uid://c3jhuwfhgn6rh" path="res://assets/cheeseboi.png" id="2_x6b7u"]

[node name="EndLevelConfirmDialog" type="CenterContainer" node_paths=PackedStringArray("exit_button", "continue_button")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_iuda5")
script = ExtResource("2_7j00m")
exit_button = NodePath("PanelContainer/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer/Exit")
continue_button = NodePath("PanelContainer/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer/Continue")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme = ExtResource("1_iuda5")

[node name="NinePatchRect" type="NinePatchRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("2_bqswe")
patch_margin_left = 16
patch_margin_top = 12
patch_margin_right = 17
patch_margin_bottom = 12

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label1" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"HeaderLarge"
text = "End Level?"

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Eating more food will increase 
your score."
horizontal_alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer2/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer2/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("2_x6b7u")
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="FoodProgressLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "0 / 3"
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Exit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "End Level"

[node name="Continue" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Continue
"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer/Continue" to="." method="_on_continue_pressed"]
